--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG BUSSID HUB | Pro Gaming Community</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
+    <title>BMG BUSSID HUB | Pro Gaming</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Rajdhani:wght@500;700&family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -12,7 +12,6 @@
             --neon-purple: #7000ff;
             --neon-red: #ff0055;
             --dark-bg: #030509;
-            --card-bg: rgba(13, 18, 29, 0.9);
         }
 
         body {
@@ -22,217 +21,181 @@
             margin: 0; padding: 0;
             display: flex; flex-direction: column; align-items: center;
             overflow-x: hidden;
-            background-image: 
-                radial-gradient(circle at 20% 30%, rgba(112, 0, 255, 0.15) 0%, transparent 40%),
-                radial-gradient(circle at 80% 70%, rgba(0, 242, 255, 0.15) 0%, transparent 40%);
+            background-image: radial-gradient(circle at 50% 50%, #0d121d 0%, #030509 100%);
         }
 
-        /* প্রিমিয়াম হেডার - সেন্টারড */
         header {
-            width: 100%; padding: 60px 0;
+            width: 100%; padding: 50px 0;
             text-align: center;
-            background: linear-gradient(to bottom, rgba(0, 242, 255, 0.05), transparent);
-            border-bottom: 1px solid rgba(0, 242, 255, 0.2);
-            backdrop-filter: blur(5px);
-            z-index: 100;
+            border-bottom: 1px solid rgba(0, 242, 255, 0.1);
         }
 
-        /* আনকমন লোগো স্টাইল - EBL */
-        .logo-box {
-            display: inline-block;
-            padding: 10px 20px;
-            border: 2px solid var(--neon-blue);
-            background: rgba(0, 0, 0, 0.6);
-            border-radius: 5px;
-            margin-bottom: 15px;
-            box-shadow: 0 0 15px rgba(0, 242, 255, 0.4);
-            position: relative;
+        /* BMG লোগো স্টাইল - বড় এবং বোল্ড */
+        .bmg-logo {
+            font-family: 'Black Ops One', cursive; /* গেমিং ফন্ট */
+            font-size: 5rem;
+            letter-spacing: 5px;
+            color: #fff;
+            text-shadow: 0 0 20px var(--neon-blue), 0 0 40px var(--neon-purple);
+            margin: 0;
+            text-transform: uppercase;
         }
-        .logo-box::after {
-            content: ''; position: absolute; top: -5px; right: -5px; bottom: -5px; left: -5px;
-            border: 1px solid var(--neon-purple); border-radius: 8px;
-            animation: pulse 2s infinite;
-        }
-        .ebl-logo {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3rem;
-            background: linear-gradient(to right, #fff, var(--neon-blue), #fff);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+        
+        .tagline {
+            font-family: 'Orbitron';
+            color: var(--neon-blue);
+            font-size: 0.8rem;
+            letter-spacing: 4px;
+            margin-top: 10px;
         }
 
-        @keyframes pulse {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.05); opacity: 0.5; }
-            100% { transform: scale(1); opacity: 1; }
-        }
-
-        /* ডিজিটাল ক্লক - সেন্টারড */
+        /* ডিজিটাল ক্লক ফিক্সড ডিজাইন */
         .clock-container {
-            margin: -40px 0 30px 0;
-            z-index: 10;
+            margin: 20px auto;
+            width: 90%; max-width: 400px;
         }
 
         .digital-clock {
-            background: rgba(0, 0, 0, 0.85);
+            background: rgba(0, 0, 0, 0.8);
             border: 2px solid var(--neon-blue);
-            padding: 25px 50px;
+            padding: 20px;
             border-radius: 15px;
-            box-shadow: 0 0 30px rgba(0, 242, 255, 0.3);
+            box-shadow: 0 0 20px rgba(0, 242, 255, 0.2);
             text-align: center;
-            backdrop-filter: blur(10px);
         }
+
+        .clock-label { font-family: 'Orbitron'; font-size: 0.7rem; color: #666; display: block; margin-bottom: 10px; }
 
         #timer {
             font-family: 'Orbitron', sans-serif;
             font-size: 3rem;
             color: var(--neon-blue);
-            text-shadow: 0 0 15px var(--neon-blue);
-            margin: 5px 0;
+            text-shadow: 0 0 10px var(--neon-blue);
+            line-height: 1;
+            margin: 10px 0;
         }
 
-        .schedule-info {
-            color: #bdc3c7; font-size: 1rem; margin-top: 10px;
-            letter-spacing: 1px;
-        }
+        .schedule-info { color: #bdc3c7; font-size: 0.9rem; }
 
-        /* কার্ড সেকশন - সেন্টারড গ্রিড */
-        .container {
-            width: 90%; max-width: 1100px;
+        /* সোশ্যাল বাটন - বড় এবং কালারফুল */
+        .social-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 30px;
-            padding-bottom: 60px;
-            justify-items: center; /* কার্ডগুলো মাঝখানে থাকবে */
+            grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+            gap: 15px; width: 90%; max-width: 600px; margin: 30px 0;
         }
-
-        .card {
-            background: var(--card-bg);
-            border-radius: 20px; overflow: hidden;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.4s ease;
-            max-width: 380px; /* কার্ড খুব বেশি বড় হবে না */
-        }
-
-        .card:hover {
-            transform: translateY(-10px) scale(1.02);
-            border-color: var(--neon-blue);
-            box-shadow: 0 10px 30px rgba(0, 242, 255, 0.2);
-        }
-
-        /* ছবি ঝাপসা রোধ করার জন্য ফিক্স */
-        .card img {
-            width: 100%; height: 210px;
-            object-fit: cover;
-            image-rendering: -webkit-optimize-contrast; /* শার্পনেস বাড়াবে */
-            display: block;
-        }
-
-        .card-content { padding: 25px; text-align: center; }
-
-        .download-btn {
-            display: inline-block; width: 100%;
-            background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue));
-            color: white; padding: 15px 0; text-decoration: none;
-            border-radius: 12px; font-weight: bold; font-family: 'Orbitron';
-            transition: 0.3s;
-        }
-
-        /* সোশ্যাল বাটন - সেন্টারড */
-        .social-bar {
-            display: flex; gap: 15px; margin: 20px 0;
-            justify-content: center;
-        }
-        .social-icon {
-            width: 50px; height: 50px; background: rgba(255,255,255,0.05);
+        .social-btn {
             display: flex; align-items: center; justify-content: center;
-            border-radius: 50%; color: white; text-decoration: none;
-            border: 1px solid rgba(255,255,255,0.1); transition: 0.3s;
+            gap: 10px; padding: 15px; border-radius: 10px;
+            text-decoration: none; color: white; font-weight: bold;
+            font-size: 1.1rem; transition: 0.3s;
         }
-        .social-icon:hover { background: var(--neon-blue); color: #000; transform: rotate(360deg); }
+        .btn-discord { background: #5865F2; box-shadow: 0 4px 15px rgba(88, 101, 242, 0.3); }
+        .btn-facebook { background: #1877F2; box-shadow: 0 4px 15px rgba(24, 119, 242, 0.3); }
+        .btn-whatsapp { background: #25D366; box-shadow: 0 4px 15px rgba(37, 211, 102, 0.3); }
+        .btn-telegram { background: #0088cc; box-shadow: 0 4px 15px rgba(0, 136, 204, 0.3); }
+        .social-btn:hover { transform: translateY(-5px); filter: brightness(1.2); }
 
         /* রুলস বাটন */
         .rules-btn {
             background: transparent; border: 2px solid var(--neon-red);
-            color: var(--neon-red); padding: 12px 40px; border-radius: 50px;
-            font-family: 'Orbitron'; font-weight: bold; cursor: pointer;
-            transition: 0.3s; margin-bottom: 20px;
+            color: var(--neon-red); padding: 12px 30px; border-radius: 50px;
+            font-family: 'Orbitron'; cursor: pointer; transition: 0.3s;
+            margin-bottom: 40px;
         }
         .rules-btn:hover { background: var(--neon-red); color: white; box-shadow: 0 0 20px var(--neon-red); }
 
         #rules-content {
-            display: none; width: 90%; max-width: 800px;
-            background: rgba(255, 0, 85, 0.05); padding: 25px;
-            border-radius: 15px; border: 1px solid var(--neon-red); margin-bottom: 40px;
+            display: none; width: 85%; max-width: 800px;
+            background: rgba(255, 0, 85, 0.05); padding: 20px;
+            border-radius: 15px; border: 1px solid var(--neon-red); margin-bottom: 30px;
         }
 
-        /* মেসেঞ্জার বাটন */
+        /* কার্ড সেকশন */
+        .container {
+            width: 90%; max-width: 1100px;
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 30px; padding-bottom: 60px;
+        }
+        .card {
+            background: rgba(13, 18, 29, 0.9);
+            border-radius: 15px; overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: 0.3s;
+        }
+        .card:hover { border-color: var(--neon-blue); transform: scale(1.02); }
+        .card img { width: 100%; height: 200px; object-fit: cover; display: block; }
+        .card-content { padding: 20px; text-align: center; }
+        .card-content h3 { font-family: 'Orbitron'; margin-bottom: 15px; }
+        .download-btn {
+            display: inline-block; width: 100%;
+            background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue));
+            color: white; padding: 12px 0; text-decoration: none;
+            border-radius: 8px; font-weight: bold;
+        }
+
         .messenger-float {
-            position: fixed; bottom: 30px; right: 30px;
-            background: #0084ff; color: white; width: 65px; height: 65px;
+            position: fixed; bottom: 25px; right: 25px;
+            background: #0084ff; color: white; width: 60px; height: 60px;
             border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            font-size: 32px; box-shadow: 0 5px 20px rgba(0, 132, 255, 0.4);
+            font-size: 30px; box-shadow: 0 4px 15px rgba(0, 132, 255, 0.4);
             z-index: 1000; text-decoration: none;
         }
 
-        footer { padding: 60px; color: #555; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
+        footer { padding: 40px; color: #444; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
     </style>
 </head>
 <body>
 
 <header>
-    <div class="logo-box">
-        <span class="ebl-logo">EBL</span>
-    </div>
-    <p style="color: var(--neon-blue); letter-spacing: 5px; margin: 0;">BORN TO DRIVE • LIVE TO GAME</p>
+    <h1 class="bmg-logo">BMG</h1>
+    <div class="tagline">BORN TO DRIVE • LIVE TO GAME</div>
 </header>
 
 <div class="clock-container">
     <div class="digital-clock">
-        <span style="font-size: 0.8rem; color: #666; font-family: 'Orbitron';">NEXT MATCH STARTS IN</span>
+        <span class="clock-label">NEXT MULTIPLAYER MATCH</span>
         <div id="timer">00:00:00</div>
         <div class="schedule-info">
-            <i class="fas fa-gamepad"></i> দুপুর ০২:৩০ | রাত ০৯:০০
+            <i class="fas fa-clock"></i> দুপুর ০২:৩০ | রাত ০৯:০০
         </div>
     </div>
 </div>
 
-<div class="social-bar">
-    <a href="https://discord.gg/fUKA2MpFmn" class="social-icon" title="Discord"><i class="fab fa-discord"></i></a>
-    <a href="https://www.facebook.com/groups/4203315063290851/" class="social-icon" title="FB Group"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://chat.whatsapp.com/KimQEIVWEYNI7AEiqMT4hs" class="social-icon" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-    <a href="https://t.me/khucra" class="social-icon" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
+<div class="social-grid">
+    <a href="https://discord.gg/fUKA2MpFmn" class="social-btn btn-discord" target="_blank"><i class="fab fa-discord"></i> Discord</a>
+    <a href="https://www.facebook.com/groups/4203315063290851/" class="social-btn btn-facebook" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+    <a href="https://chat.whatsapp.com/KimQEIVWEYNI7AEiqMT4hs" class="social-btn btn-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+    <a href="https://t.me/khucra" class="social-btn btn-telegram" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
 </div>
 
 <button class="rules-btn" onclick="toggleRules()">VIEW ROOM RULES</button>
 
 <div id="rules-content">
-    <h3 style="font-family: 'Orbitron'; margin-top: 0;">🛑 মাল্টিপ্লেয়ার রুমের নিয়মাবলী</h3>
-    <ul style="line-height: 1.8; color: #bdc3c7;">
-        <li>১. এক লাইনে গাড়ি চালান, ওভারটেক করা নিষেধ।</li>
-        <li>২. গতি অবশ্যই ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
-        <li>৩. হর্ন বাজানো থেকে বিরত থাকুন (জরুরি প্রয়োজন ছাড়া)।</li>
-        <li>৪. ইন্ডিকেটর হেডলাইট সঠিকভাবে ব্যবহার করুন।</li>
-        <li>৫. অ্যাডমিনের নির্দেশ মেনে চলুন।</li>
+    <h3 style="font-family: 'Orbitron'; margin-top: 0; color: var(--neon-red);">🛑 রুমের নিয়মাবলী</h3>
+    <ul style="line-height: 1.8; color: #bdc3c7; list-style: none; padding: 0;">
+        <li>১. লাইন মেনটেইন করে গাড়ি চালান।</li>
+        <li>২. স্পিড ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
+        <li>৩. অযথা ওভারটেক এবং হর্ন বাজানো নিষেধ।</li>
+        <li>৪. ইন্ডিকেটর এবং হেডলাইট সঠিকভাবে ব্যবহার করুন।</li>
     </ul>
 </div>
 
-<h2 style="font-family: 'Orbitron'; color: var(--neon-blue); font-size: 1.5rem; margin: 50px 0 25px;">PREMIUM BUS SKINS</h2>
+<h2 style="font-family: 'Orbitron'; color: var(--neon-blue); margin-bottom: 30px;">PREMIUM BUS SKINS</h2>
 
 <div class="container">
     <div class="card">
         <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif">
         <div class="card-content">
-            <h3 style="margin: 0 0 15px 0;">HANIF PREMIUM V2</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
+            <h3>HANIF PREMIUM V2</h3>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
 
     <div class="card">
         <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
         <div class="card-content">
-            <h3 style="margin: 0 0 15px 0;">ELITE MULTIPLAYER</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
+            <h3>ELITE MULTIPLAYER</h3>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
 </div>
@@ -242,8 +205,7 @@
 </a>
 
 <footer>
-    &copy; 2026 BMG-BUSSID HUB | DESIGNED BY JCT NISHAT<br>
-    <small>THE ULTIMATE DESTINATION FOR BUSSID LOVERS</small>
+    &copy; 2026 BMG-BUSSID HUB | JCT NISHAT
 </footer>
 
 <script>
