--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
         header {
             width: 100%; padding: 60px 0 40px;
             text-align: center;
-            background: linear-gradient(to bottom, rgba(0,0,0,0.5), transparent);
         }
 
-        /* BMG আরজিবি নিয়ন লাইটিং */
         .bmg-logo {
             font-family: 'Black Ops One', cursive;
             font-size: 6rem;
@@ -46,12 +44,8 @@
         }
 
         @keyframes neon-glow {
-            from {
-                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--neon-blue), 0 0 40px var(--neon-blue), 0 0 50px var(--neon-blue);
-            }
-            to {
-                text-shadow: 0 0 5px #fff, 0 0 10px var(--neon-purple), 0 0 20px var(--neon-purple), 0 0 30px var(--neon-purple), 0 0 40px var(--neon-purple);
-            }
+            from { text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--neon-blue), 0 0 40px var(--neon-blue); }
+            to { text-shadow: 0 0 5px #fff, 0 0 10px var(--neon-purple), 0 0 20px var(--neon-purple), 0 0 30px var(--neon-purple); }
         }
 
         .sub-logo {
@@ -61,14 +55,11 @@
             letter-spacing: 3px;
             margin-top: 10px;
             font-weight: bold;
-            text-transform: uppercase;
         }
 
-        /* ডিজিটাল ক্লক */
         .clock-container {
             margin: 20px auto;
             width: 90%; max-width: 450px;
-            perspective: 1000px;
         }
 
         .digital-clock {
@@ -76,9 +67,8 @@
             border: 2px solid rgba(0, 242, 255, 0.3);
             padding: 30px;
             border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5), inset 0 0 20px rgba(0, 242, 255, 0.1);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
             text-align: center;
-            backdrop-filter: blur(10px);
         }
 
         #timer {
@@ -89,22 +79,6 @@
             margin: 10px 0;
         }
 
-        /* স্ট্যাটাস সেকশন */
-        .stats-bar {
-            display: flex; gap: 20px; margin: 30px 0;
-            width: 90%; max-width: 800px; justify-content: center;
-        }
-        .stat-item {
-            background: rgba(255,255,255,0.05);
-            padding: 15px 25px; border-radius: 12px;
-            border: 1px solid rgba(255,255,255,0.1);
-            text-align: center; flex: 1;
-        }
-        .stat-item i { color: var(--neon-blue); margin-bottom: 5px; font-size: 1.2rem; }
-        .stat-item span { display: block; font-family: 'Orbitron'; font-weight: bold; font-size: 1.1rem; }
-        .stat-item label { font-size: 0.7rem; color: #777; text-transform: uppercase; }
-
-        /* সোশ্যাল বাটন গ্রিড */
         .social-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
@@ -120,9 +94,7 @@
         .btn-facebook { background: #1877F2; }
         .btn-whatsapp { background: #25D366; }
         .btn-telegram { background: #0088cc; }
-        .social-btn:hover { transform: translateY(-5px) scale(1.05); filter: brightness(1.2); }
 
-        /* কার্ডস - ছবি ঝাপসা রোধ করার জন্য ফিক্স */
         .container {
             width: 95%; max-width: 1200px;
             display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -138,9 +110,7 @@
         
         .card img { 
             width: 100%; height: 220px; object-fit: cover; 
-            /* 4K ছবির কোয়ালিটি ধরে রাখার জন্য */
             image-rendering: -webkit-optimize-contrast;
-            image-rendering: crisp-edges;
             display: block;
         }
         
@@ -152,7 +122,6 @@
             border-radius: 12px; font-weight: bold; font-family: 'Orbitron';
         }
 
-        /* রুলস বাটন */
         .rules-btn {
             background: transparent; border: 2px solid var(--neon-red);
             color: var(--neon-red); padding: 15px 40px; border-radius: 50px;
@@ -165,8 +134,7 @@
             position: fixed; bottom: 30px; right: 30px;
             background: #0084ff; color: white; width: 65px; height: 65px;
             border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            font-size: 32px; box-shadow: 0 5px 25px rgba(0, 132, 255, 0.5);
-            z-index: 1000; text-decoration: none;
+            font-size: 32px; z-index: 1000; text-decoration: none;
         }
 
         footer { padding: 60px; color: #444; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
@@ -189,24 +157,6 @@
     </div>
 </div>
 
-<div class="stats-bar">
-    <div class="stat-item">
-        <i class="fas fa-users"></i>
-        <span>500+</span>
-        <label>Gamers</label>
-    </div>
-    <div class="stat-item">
-        <i class="fas fa-download"></i>
-        <span>1.5K</span>
-        <label>Downloads</label>
-    </div>
-    <div class="stat-item">
-        <i class="fas fa-server"></i>
-        <span>Active</span>
-        <label>Status</label>
-    </div>
-</div>
-
 <div class="social-grid">
     <a href="https://discord.gg/fUKA2MpFmn" class="social-btn btn-discord" target="_blank"><i class="fab fa-discord"></i> Discord</a>
     <a href="https://www.facebook.com/groups/4203315063290851/" class="social-btn btn-facebook" target="_blank"><i class="fab fa-facebook-f"></i> Group</a>
@@ -216,9 +166,9 @@
 
 <button class="rules-btn" onclick="toggleRules()">VIEW ROOM RULES</button>
 
-<div id="rules-content" style="display:none; width: 85%; max-width: 800px; background: rgba(255,255,255,0.02); padding: 30px; border-radius: 20px; border: 1px solid var(--neon-red); margin-bottom: 40px;">
+<div id="rules-content" style="display:none; width: 85%; max-width: 800px; background: rgba(255,255,255,0.02); padding: 30px; border-radius: 20px; border: 1px solid var(--neon-red); margin-bottom: 40px; margin-left: auto; margin-right: auto;">
     <h3 style="font-family: 'Orbitron'; color: var(--neon-red); margin-top:0;">🛑 Multiplayer Conduct</h3>
-    <ul style="line-height: 2; color: #bdc3c7; list-style: square;">
+    <ul style="line-height: 2; color: #bdc3c7; list-style: square; text-align: left;">
         <li>গাড়ি চালানোর সময় নির্দিষ্ট লাইন বজায় রাখুন।</li>
         <li>গতি অবশ্যই ৮০-১০০ কিমি/ঘণ্টার মধ্যে সীমাবদ্ধ রাখুন।</li>
         <li>অকারণে ওভারটেক বা হর্ন বাজিয়ে বিরক্ত করবেন না।</li>
@@ -230,7 +180,7 @@
 
 <div class="container">
     <div class="card">
-        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Saudia Bus Skin">
+        <img src="https://i.postimg.cc/85zXpTPh/20260228-020918.jpg" alt="Saudia Bus Skin">
         <div class="card-content">
             <h3 style="font-family: 'Orbitron'; margin-bottom: 15px;">SAUDIA BUS SKIN (4K)</h3>
             <a href="https://drive.google.com/file/d/1TckotrGd1sy2boe1FVwqsiSRpR89iHgv/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD MOD</a>
@@ -240,7 +190,7 @@
     <div class="card">
         <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
         <div class="card-content">
-            <h3 style="font-family: 'Orbitron'; margin-bottom: 15px;">ELITE MULTIPLAYER</h3>
+            <h3>ELITE MULTIPLAYER</h3>
             <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD MOD</a>
         </div>
     </div>
@@ -251,8 +201,7 @@
 </a>
 
 <footer>
-    &copy; 2026 BMG-BUSSID HUB | OFFICIAL COMMUNITY<br>
-    <small style="letter-spacing: 2px; color: #333;">POWERED BY JCT NISHAT</small>
+    &copy; 2026 BMG-BUSSID HUB | OFFICIAL COMMUNITY
 </footer>
 
 <script>
