--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG BUSSID HUB | Official Multiplayer Portal</title>
+    <title>BMG BUSSID HUB | Official Portal</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Rajdhani:wght@500;700&family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -22,24 +22,16 @@
             margin: 0; padding: 0;
             display: flex; flex-direction: column; align-items: center;
             overflow-x: hidden;
-            background-image: 
-                radial-gradient(circle at 10% 20%, rgba(112, 0, 255, 0.1) 0%, transparent 40%),
-                radial-gradient(circle at 90% 80%, rgba(0, 242, 255, 0.1) 0%, transparent 40%);
+            background-image: radial-gradient(circle at 10% 20%, rgba(112, 0, 255, 0.1) 0%, transparent 40%),
+                              radial-gradient(circle at 90% 80%, rgba(0, 242, 255, 0.1) 0%, transparent 40%);
         }
 
-        header {
-            width: 100%; padding: 60px 0 40px;
-            text-align: center;
-        }
+        header { width: 100%; padding: 60px 0 30px; text-align: center; }
 
         .bmg-logo {
             font-family: 'Black Ops One', cursive;
-            font-size: 6rem;
-            margin: 0;
-            line-height: 1;
-            color: #fff;
-            text-transform: uppercase;
-            letter-spacing: 8px;
+            font-size: 6rem; margin: 0; line-height: 1;
+            color: #fff; text-transform: uppercase; letter-spacing: 8px;
             animation: neon-glow 3s ease-in-out infinite alternate;
         }
 
@@ -48,96 +40,38 @@
             to { text-shadow: 0 0 5px #fff, 0 0 10px var(--neon-purple), 0 0 20px var(--neon-purple), 0 0 30px var(--neon-purple); }
         }
 
-        .sub-logo {
-            font-family: 'Orbitron';
-            font-size: 1.2rem;
-            color: #ccc;
-            letter-spacing: 3px;
-            margin-top: 10px;
-            font-weight: bold;
-        }
+        .sub-logo { font-family: 'Orbitron'; font-size: 1.1rem; color: #ccc; letter-spacing: 3px; margin-top: 10px; font-weight: bold; }
 
-        .clock-container {
-            margin: 20px auto;
-            width: 90%; max-width: 450px;
-        }
+        .clock-container { margin: 20px auto; width: 90%; max-width: 450px; }
+        .digital-clock { background: rgba(0, 0, 0, 0.8); border: 2px solid rgba(0, 242, 255, 0.3); padding: 30px; border-radius: 20px; text-align: center; backdrop-filter: blur(10px); }
+        #timer { font-family: 'Orbitron', sans-serif; font-size: 3.5rem; color: var(--neon-blue); text-shadow: 0 0 20px var(--neon-blue); margin: 10px 0; }
 
-        .digital-clock {
-            background: rgba(0, 0, 0, 0.8);
-            border: 2px solid rgba(0, 242, 255, 0.3);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
-            text-align: center;
-        }
-
-        #timer {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3.5rem;
-            color: var(--neon-blue);
-            text-shadow: 0 0 20px var(--neon-blue);
-            margin: 10px 0;
-        }
-
-        .social-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-            gap: 15px; width: 90%; max-width: 700px; margin: 20px 0;
-        }
-        .social-btn {
-            display: flex; align-items: center; justify-content: center;
-            gap: 10px; padding: 18px; border-radius: 15px;
-            text-decoration: none; color: white; font-weight: bold;
-            font-size: 1.1rem; transition: 0.3s;
-        }
-        .btn-discord { background: #5865F2; }
-        .btn-facebook { background: #1877F2; }
-        .btn-whatsapp { background: #25D366; }
-        .btn-telegram { background: #0088cc; }
+        .social-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 12px; width: 95%; max-width: 700px; margin: 20px 0; }
+        .social-btn { display: flex; align-items: center; justify-content: center; gap: 8px; padding: 15px; border-radius: 12px; text-decoration: none; color: white; font-weight: bold; transition: 0.3s; }
+        .btn-discord { background: #5865F2; } .btn-facebook { background: #1877F2; } .btn-whatsapp { background: #25D366; } .btn-telegram { background: #0088cc; }
+        .social-btn:hover { transform: scale(1.05); filter: brightness(1.2); }
 
         .container {
-            width: 95%; max-width: 1200px;
-            display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 30px; padding: 40px 0 80px;
-        }
-        .card {
-            background: var(--card-bg);
-            border-radius: 20px; overflow: hidden;
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            transition: 0.4s;
-        }
-        .card:hover { border-color: var(--neon-blue); box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); }
-        
-        .card img { 
-            width: 100%; height: 220px; object-fit: cover; 
-            image-rendering: -webkit-optimize-contrast;
-            display: block;
-        }
-        
-        .card-content { padding: 25px; text-align: center; }
-        .download-btn {
-            display: inline-block; width: 100%;
-            background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue));
-            color: white; padding: 15px 0; text-decoration: none;
-            border-radius: 12px; font-weight: bold; font-family: 'Orbitron';
+            width: 95%; max-width: 1300px;
+            display: grid; 
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 25px; padding: 40px 0 80px;
         }
 
-        .rules-btn {
-            background: transparent; border: 2px solid var(--neon-red);
-            color: var(--neon-red); padding: 15px 40px; border-radius: 50px;
-            font-family: 'Orbitron'; font-weight: bold; cursor: pointer;
-            margin: 20px 0 40px; transition: 0.3s;
-        }
-        .rules-btn:hover { background: var(--neon-red); color: white; box-shadow: 0 0 30px var(--neon-red); }
+        .card { background: var(--card-bg); border-radius: 20px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s; display: flex; flex-direction: column; }
+        .card:hover { border-color: var(--neon-blue); box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); transform: translateY(-5px); }
+        .card img { width: 100%; height: 200px; object-fit: cover; image-rendering: -webkit-optimize-contrast; }
+        .card-content { padding: 20px; text-align: center; flex-grow: 1; }
+        .card-content h3 { font-family: 'Orbitron'; font-size: 1.2rem; margin-bottom: 15px; }
 
-        .messenger-float {
-            position: fixed; bottom: 30px; right: 30px;
-            background: #0084ff; color: white; width: 65px; height: 65px;
-            border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            font-size: 32px; z-index: 1000; text-decoration: none;
-        }
+        .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue)); color: white; padding: 14px 0; text-decoration: none; border-radius: 10px; font-weight: bold; font-family: 'Orbitron'; }
 
-        footer { padding: 60px; color: #444; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
+        .rules-btn { background: transparent; border: 2px solid var(--neon-red); color: var(--neon-red); padding: 12px 35px; border-radius: 50px; font-family: 'Orbitron'; font-weight: bold; cursor: pointer; margin-bottom: 20px; transition: 0.3s; }
+        .rules-btn:hover { background: var(--neon-red); color: white; }
+
+        .messenger-float { position: fixed; bottom: 25px; right: 25px; background: #0084ff; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; z-index: 1000; text-decoration: none; }
+
+        footer { padding: 50px; color: #444; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
     </style>
 </head>
 <body>
@@ -149,11 +83,9 @@
 
 <div class="clock-container">
     <div class="digital-clock">
-        <span style="font-family: 'Orbitron'; font-size: 0.7rem; color: #555; letter-spacing: 2px;">COUNTDOWN TO NEXT ROOM</span>
+        <span style="font-family: 'Orbitron'; font-size: 0.7rem; color: #555;">COUNTDOWN TO NEXT ROOM</span>
         <div id="timer">00:00:00</div>
-        <div style="color: #888; font-size: 0.9rem;">
-            <i class="fas fa-calendar-alt"></i> দুপুর ০২:৩০ | রাত ০৯:০০
-        </div>
+        <div style="color: #888; font-size: 0.9rem;"><i class="fas fa-clock"></i> দুপুর ০২:৩০ | রাত ০৯:০০</div>
     </div>
 </div>
 
@@ -164,26 +96,32 @@
     <a href="https://t.me/khucra" class="social-btn btn-telegram" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
 </div>
 
-<button class="rules-btn" onclick="toggleRules()">VIEW ROOM RULES</button>
-
-<div id="rules-content" style="display:none; width: 85%; max-width: 800px; background: rgba(255,255,255,0.02); padding: 30px; border-radius: 20px; border: 1px solid var(--neon-red); margin-bottom: 40px; margin-left: auto; margin-right: auto;">
-    <h3 style="font-family: 'Orbitron'; color: var(--neon-red); margin-top:0;">🛑 Multiplayer Conduct</h3>
-    <ul style="line-height: 2; color: #bdc3c7; list-style: square; text-align: left;">
-        <li>গাড়ি চালানোর সময় নির্দিষ্ট লাইন বজায় রাখুন।</li>
-        <li>গতি অবশ্যই ৮০-১০০ কিমি/ঘণ্টার মধ্যে সীমাবদ্ধ রাখুন।</li>
-        <li>অকারণে ওভারটেক বা হর্ন বাজিয়ে বিরক্ত করবেন না।</li>
-        <li>সবার সাথে ভদ্র আচরণ করুন এবং অ্যাডমিনের নির্দেশ মানুন।</li>
+<button class="rules-btn" onclick="toggleRules()">VIEW RULES</button>
+<div id="rules-content" style="display:none; width: 85%; max-width: 800px; background: rgba(255,0,0,0.05); padding: 25px; border-radius: 15px; border: 1px solid var(--neon-red); margin-bottom: 40px;">
+    <h3 style="color: var(--neon-red); margin-top:0;">🛑 Rules</h3>
+    <ul style="line-height: 1.8; color: #ccc; text-align: left;">
+        <li>১. লাইন মেনটেইন করে গাড়ি চালান।</li>
+        <li>২. স্পিড ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
+        <li>৩. অকারণে হর্ন এবং ওভারটেক করবেন না।</li>
     </ul>
 </div>
 
-<h2 style="font-family: 'Orbitron'; color: var(--neon-blue); letter-spacing: 2px; margin-bottom: 30px;">LATEST MODS & SKINS</h2>
+<h2 style="font-family: 'Orbitron'; color: var(--neon-blue); letter-spacing: 2px;">LATEST MODS & SKINS</h2>
 
 <div class="container">
     <div class="card">
-        <img src="https://i.postimg.cc/85zXpTPh/20260228-020918.jpg" alt="Saudia Bus Skin">
+        <img src="https://i.postimg.cc/SNC5FXKN/20260228-020918.jpg" alt="Saudia Bus">
         <div class="card-content">
-            <h3 style="font-family: 'Orbitron'; margin-bottom: 15px;">SAUDIA BUS SKIN (4K)</h3>
-            <a href="https://drive.google.com/file/d/1TckotrGd1sy2boe1FVwqsiSRpR89iHgv/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD MOD</a>
+            <h3>SAUDIA PREMIUM (4K)</h3>
+            <a href="https://drive.google.com/file/d/1TckotrGd1sy2boe1FVwqsiSRpR89iHgv/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD NOW</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif">
+        <div class="card-content">
+            <h3>HANIF PREMIUM V2</h3>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
 
@@ -191,49 +129,31 @@
         <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
         <div class="card-content">
             <h3>ELITE MULTIPLAYER</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD MOD</a>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
 </div>
 
-<a href="https://m.me/61583460129028" target="_blank" class="messenger-float">
-    <i class="fab fa-facebook-messenger"></i>
-</a>
+<a href="https://m.me/61583460129028" target="_blank" class="messenger-float"><i class="fab fa-facebook-messenger"></i></a>
 
-<footer>
-    &copy; 2026 BMG-BUSSID HUB | OFFICIAL COMMUNITY
-</footer>
+<footer>&copy; 2026 BMG-BUSSID HUB | OFFICIAL COMMUNITY</footer>
 
 <script>
-    function toggleRules() {
-        var x = document.getElementById("rules-content");
-        x.style.display = (x.style.display === "block") ? "none" : "block";
-    }
-
+    function toggleRules() { var x = document.getElementById("rules-content"); x.style.display = (x.style.display === "block") ? "none" : "block"; }
     function updateTimer() {
         const now = new Date();
         const times = ["14:30:00", "21:00:00"]; 
         let nextSession = null;
         for (let t of times) {
-            let s = new Date();
-            let [h, m, sec] = t.split(':');
-            s.setHours(h, m, sec);
+            let s = new Date(); let [h, m, sec] = t.split(':'); s.setHours(h, m, sec);
             if (s > now) { nextSession = s; break; }
         }
-        if (!nextSession) {
-            nextSession = new Date();
-            let [h, m, sec] = times[0].split(':');
-            nextSession.setDate(now.getDate() + 1);
-            nextSession.setHours(h, m, sec);
-        }
+        if (!nextSession) { nextSession = new Date(); let [h, m, sec] = times[0].split(':'); nextSession.setDate(now.getDate() + 1); nextSession.setHours(h, m, sec); }
         const diff = nextSession - now;
-        const h = Math.floor(diff / 3600000);
-        const m = Math.floor((diff % 3600000) / 60000);
-        const s = Math.floor((diff % 60000) / 1000);
+        const h = Math.floor(diff / 3600000); const m = Math.floor((diff % 3600000) / 60000); const s = Math.floor((diff % 60000) / 1000);
         document.getElementById("timer").innerHTML = (h<10?"0"+h:h)+":"+(m<10?"0"+m:m)+":"+(s<10?"0"+s:s);
     }
-    setInterval(updateTimer, 1000);
-    updateTimer();
+    setInterval(updateTimer, 1000); updateTimer();
 </script>
 
 </body>
